[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/default.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://VisualAid.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 1 )

[node name="VisualAid" type="ColorRect"]
margin_left = 8.0
margin_top = 349.0
margin_right = 226.0
margin_bottom = 477.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="COM" type="ColorRect" parent="."]
margin_right = 7.0
margin_bottom = 7.0
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="XLine2D" type="Line2D" parent="."]
points = PoolVector2Array( 0, 64, 218, 64 )
width = 1.0
default_color = Color( 0, 0, 0, 1 )

[node name="YLine2D" type="Line2D" parent="."]
points = PoolVector2Array( 109, 0, 109, 128 )
width = 1.0
default_color = Color( 0, 0, 0, 1 )

[node name="YnegLabel" type="Label" parent="."]
margin_left = 101.128
margin_top = 128.405
margin_right = 114.128
margin_bottom = 147.405
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "y:-1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YposLabel" type="Label" parent="."]
margin_left = 101.723
margin_top = -21.2078
margin_right = 114.723
margin_bottom = -2.20782
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "y:1"

[node name="XnegLabel" type="Label" parent="."]
margin_left = -8.20465
margin_top = 42.4866
margin_right = 12.7953
margin_bottom = 61.4866
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "x:-1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="XposLabel" type="Label" parent="."]
margin_left = 211.975
margin_top = 43.8502
margin_right = 232.975
margin_bottom = 62.8502
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "x:1"
__meta__ = {
"_edit_use_anchors_": false
}
